# rgb-lib

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: build.yml  checks.yml  format.yml  lint.yml  rust.yaml  rust.yml  test.yml
bindings/: README.md
bindings/c-ffi/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  example.c
bindings/c-ffi/src/: lib.rs  utils.rs
bindings/uniffi/: Cargo.toml  README.md  build.rs  uniffi.toml
bindings/uniffi/src/: lib.rs  rgb-lib.udl
cli/: Cargo.toml
cli/src/: main.rs  opts.rs  wallet_helpers.rs
docs/: multisig.md  transfer_flows.md  trasnfer_states.md
docs/UML/: transfer_flow_default.puml  transfer_flow_donation.puml  transfer_flow_preparation.puml  transfer_states_receiver.puml  transfer_states_sender.puml
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220810_130049_create_txo.rs  m20220810_131915_create_asset.rs  m20220810_131915_create_asset_rgb20.rs  m20220810_131920_create_asset_rgb21.rs  m20220810_132240_create_batch_transfer.rs  m20220810_132250_create_asset_transfer.rs  m20220810_132253_create_coloring.rs  m20220810_132256_create_transfer.rs  m20220810_162300_create_coloring.rs  m20221128_182236_rename_rgb21_to_rgb121.rs  m20221130_152708_delete_zero_allocations.rs  m20221219_125200_create_consignment_endpoint.rs  m20221219_131407_create_transfer_consignment_endpoint.rs  m20230111_133557_add_coloring_constraint.rs  m20230608_071249_init_db.rs  m20251215_124959_backup_info_update.rs  m20260414_134758_add_reserved_txo.rs  m20260625_121819_incoming_rework.rs  main.rs
rgb-lib-ffi/: Cargo.toml  README.md  build.rs  uniffi.toml
rgb-lib-ffi/rgb-lib-ffi-bindgen/: Cargo.toml
rgb-lib-ffi/rgb-lib-ffi-bindgen/src/: main.rs
rgb-lib-ffi/src/: lib.rs  rgb-lib.udl
src/: error.rs  keys.rs  lib.rs  utils.rs
src/api/: consignment_proxy.rs  mod.rs  multisig_hub.rs  proxy.rs  reject_list.rs
src/database/: enums.rs  mod.rs
src/database/entities/: asset.rs  asset_media.rs  asset_rgb121.rs  asset_rgb20.rs  asset_rgb21.rs  asset_rgb25.rs  asset_transfer.rs  backup_info.rs  batch_transfer.rs  coloring.rs  consignment_endpoint.rs  media.rs  mod.rs  pending_witness_outpoint.rs  pending_witness_script.rs  prelude.rs  reserved_txo.rs  seaql_migrations.rs  token.rs  token_media.rs  transfer.rs  transfer_consignment_endpoint.rs  transfer_transport_endpoint.rs  transport_endpoint.rs  txo.rs  wallet_transaction.rs
src/wallet/: backup.rs  core.rs  indexer.rs  mod.rs  multisig.rs  objects.rs  offline.rs  onchain_swap.rs  online.rs  rust_only.rs  singlesig.rs
src/wallet/test/: abort_pending_vanilla_tx.rs  backup.rs  blind.rs  blind_receive.rs  burn.rs  create_utxos.rs  delete_transfers.rs  drain_to.rs  export_contract.rs  fail_transfers.rs  finalize_psbt.rs  get_address.rs  get_asset_balance.rs  get_asset_metadata.rs  get_btc_balance.rs  get_fee_estimation.rs  get_wallet_data.rs  get_wallet_dir.rs  go_online.rs  inflate.rs  issue_asset.rs  issue_asset_cfa.rs  issue_asset_ifa.rs  issue_asset_nia.rs  issue_asset_rgb121.rs  issue_asset_rgb20.rs  issue_asset_rgb21.rs  issue_asset_rgb25.rs  issue_asset_uda.rs  list_assets.rs  list_pending_vanilla_txs.rs  list_transactions.rs  list_transfers.rs  list_unspents.rs  list_unspents_vanilla.rs  load.rs  mod.rs  multisig.rs  new.rs  onchain_swap.rs  (+9 more)
src/wallet/test/multisig/: mod.rs  utils.rs
src/wallet/test/utils/: api.rs  chain.rs  helpers.rs  mod.rs
tests/: compose.yaml  coverage.sh  docker-compose.yml  regtest.sh  start_services.sh
tests/esplora/: Dockerfile.notor
tests/rgb-proxy-server/: Dockerfile.modified-api  Dockerfile.modified-proto
