[package]
name = "rgblib-tool"
version = "0.1.0"
edition = "2021"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
    "Joe Miyamoto <joemphilips@gmail.com>",
]
license = "MIT"
description = "tool to use rgb-lib functionality from cli"

[[bin]]
name = "rgblib-tool"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplify = "^3.13.0"
clap = { version = "4.1.6", features = ["derive", "env"] }
rgb-lib = { version = "0.1.7", path = ".." }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
