[package]
name = "rgb-lib-migration"
version = "0.3.0-beta.2"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2024"
rust-version = "1.88.0"
repository = "https://github.com/RGB-Tools/rgb-lib"
homepage = "https://github.com/RGB-Tools/rgb-lib"
license = "MIT"
description = "RGB wallet library migrations"

[lib]
name = "rgb_lib_migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros"
] }
sea-orm-migration = { version = "1.1.19", default-features = false, features = [
    "cli",
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
