[package]
name = "rgb-lib-ffi"
version = "0.1.0"
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>", "Nicola Busanello <nicola.busanello@gmail.com>"]
edition = "2021"
rust-version = "1.59.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "rgblibffi"

[[bin]]
name = "rgb-lib-ffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
rgb-lib = { version = "0.2.0-alpha.4", path = "../" }
uniffi = "0.24.3"

# fixed-version dependencies to support building with rust 1.67
anstyle = "=1.0.1"
clap_lex = "=0.5.0"
clap_derive = "=4.3.12"

[build-dependencies]
uniffi = { version = "0.24.3", features = ["build"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[workspace]
