[package]
name = "rgb-lib-ffi"
version = "0.1.0"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2021"
rust-version = "1.67"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "rgblibffi"

[[bin]]
name = "rgb-lib-ffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
rgb-lib = { version = "0.3.0-alpha.5", path = "../", features = [
    "electrum",
    "esplora",
] }
uniffi = { version = "0.28.0", default-features = false }

[build-dependencies]
uniffi = { version = "0.28.0", default-features = false, features = [
    "build",
] }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", default-features = false, features = [
    "vendored",
] }

[workspace]
