[package]
name = "rgb-lib-c-ffi"
version = "0.1.0"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2021"
rust-version = "1.77.0"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "rgblibcffi"

[dependencies]
rgb-lib = { version = "0.3.0-alpha.11", path = "../../", features = [
    "electrum",
    "esplora",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

[build-dependencies]
cbindgen = "0.27.0"

[workspace]

[features]
default = []
all = ["camel_case"]
camel_case = ["rgb-lib/camel_case"]
