[package]
name = "rgb-lib-uniffi"
version = "0.1.0"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2024"
rust-version = "1.85.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "rgblibuniffi"

[[bin]]
name = "rgb-lib-uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
rgb-lib = { version = "0.3.0-beta.4", path = "../../", features = [
    "electrum",
    "esplora",
] }
uniffi = { version = "0.29.2", default-features = false }

[build-dependencies]
uniffi = { version = "0.29.2", default-features = false, features = [
    "build",
] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
aws-lc-rs = { version = "1.14.0", default-features = false, features = [
    "bindgen",
] }

[workspace]
